userservice/src/main/java/com/example/demo/errors/exception/InvalidSalaryException.java
package com.example.demo.errors.exception;

public class InvalidSalaryException extends Exception {    
    
    private static final long serialVersionUID = -3154618962130084535L;

}